--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             Start<span></span>
           </button>
           <button class="pause-button" onclick="pause()">
-            pause<span></span>
+            Stop<span></span>
           </button>
           <button class="stop-button" onclick="_stop()">
-            Stop<span></span>
+            Reset<span></span>
           </button>
         </div>
       </div>
